<resources>
    <string name="app_name">Trip Planner</string>
    <string name="name_your_plan">Name your plan</string>
    <string name="name">Name</string>
    <string name="add_start_date">Add start date</string>
    <string name="days_remaining_until">days remaining until</string>
    <string name="back_arrow">back_arrow</string>
    <string name="my_plans">My plans</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="road_trip">Road trip</string>
    <string name="next">Next</string>
    <string name="solo">Solo</string>
    <string name="create_plan">Create plan</string>
    <string name="destination_country">Destination country</string>
    <string name="exploration_and_hiking">Exploration and hiking</string>
    <string name="family">Family</string>
    <string name="vacation">Vacation</string>
    <string name="honeymoon">Honeymoon</string>
    <string name="business">Business</string>
    <string name="choose_categories">Choose categories</string>
    <string name="friends">Friends</string>
    <string name="cancelarrow">cancelarrow</string>
    <string name="searchbar">searchbar</string>
    <string name="countdownicon">countdownicon</string>
    <string name="addplanicon">addplanicon</string>
    <string name="search">Search</string>
    <string name="exploreicon">exploreicon</string>
    <string name="your_tripname">your tripname</string>
    <string name="settings">settings</string>
    <string name="reminderbell">reminderbell</string>
    <string name="trip_name">Trip name</string>
    <string name="destination_countries">Destination countries</string>
    <string name="trip_date">Trip date</string>
    <string name="cities_to_visit">Cities to visit</string>
    <string name="saved_activites">Saved activites</string>
    <string name="your_notes">Your notes</string>
    <string name="countdown">Countdown</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_to">Add to</string>
    <string name="stepback">stepback</string>
    <string name="destination_countries_go_here">Destination countries go here.</string>
    <string name="calendaricon">calendaricon</string>
    <string name="backgroundpicture">backgroundpicture</string>
    <string name="backbutton">backbutton</string>
    <string name="deletebutton">deletebutton</string>
    <string name="locationicon">locationicon</string>
    <string name="_01_01_1970_01_01_1970">01-01-1970 - 01-01-1970</string>
    <string name="your_notes_go_here">Your notes go here.</string>
    <string name="background">background</string>
    <string name="addicon">addicon</string>
    <string name="saveicon">saveicon</string>
    <string name="edit_button">Edit_button</string>
    <string name="add">ADD</string>
    <string name="todo">TODO</string>
    <string name="add">ADD</string>
    <string name="hotelbackground">hotelbackground</string>
</resources>