<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsActivity"
    app:statusBarBackground="@color/detail_statusbar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="590dp"
        app:layout_constraintTop_toBottomOf="@+id/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/_01_01_1970_01_01_1970"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.135"
                app:layout_constraintStart_toEndOf="@+id/calendar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="36dp"
                android:layout_height="33dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/calendaricon"
                android:fontFamily="@font/open_sans"
                android:src="@drawable/calendaricon"
                android:text="@string/trip_date"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="36dp"
                android:layout_height="33dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/locationicon"
                android:fontFamily="@font/open_sans"
                android:src="@drawable/location_dark"
                android:text="@string/trip_date"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar" />

            <TextView
                android:id="@+id/countries"
                android:layout_width="260dp"
                android:layout_height="29dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans"
                android:minHeight="60dp"
                android:text="@string/destination_countries_go_here"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/locationIcon"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/cities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/cities_to_visit"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countries" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CitiesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cities" />

            <TextView
                android:id="@+id/activites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/saved_activites"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CitiesRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ActivitiesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activites" />

            <TextView
                android:id="@+id/notesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/your_notes"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ActivitiesRecyclerView" />

            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="130dp"
                android:paddingTop="15dp"
                app:cardBackgroundColor="@color/countdown_statusbar"
                app:cardCornerRadius="18dp"
                app:cardElevation="3dp"
                app:contentPadding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notesLabel">

                <TextView
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/your_notes_go_here"
                    android:textAlignment="center"
                    android:textColor="@color/default_blue"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notesLabel" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/background"
        android:layout_width="394dp"
        android:layout_height="223dp"
        android:contentDescription="@string/backgroundpicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detailsbackground" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/trip_name"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteicon"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/deletebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deleteicon" />

</androidx.constraintlayout.widget.ConstraintLayout>