<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsActivity"
    app:statusBarBackground="@color/detail_statusbar">

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="590dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/destination_countries"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedDate" />

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/trip_date"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selectedDate"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/_01_01_1970_01_01_1970"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateLabel" />

            <ImageView
                android:id="@+id/selectDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="52dp"
                android:contentDescription="@string/calendaricon"
                android:src="@drawable/calendaricon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/selectedDate"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/spinner_card"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/subtleBlue"
                app:cardCornerRadius="18dp"
                app:cardElevation="3dp"
                app:contentPadding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/destination">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <Spinner
                        android:id="@+id/dropdownlist2"
                        android:layout_width="340dp"
                        android:layout_height="43dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/dropdown_final"
                        android:fontFamily="@font/open_sans"
                        android:spinnerMode="dropdown"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.478"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dropdownlist1"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Spinner
                        android:id="@+id/dropdownlist1"
                        style="@android:style/Widget.DeviceDefault.Light.Spinner"
                        android:layout_width="340dp"
                        android:layout_height="43dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/dropdown_final"
                        android:fontFamily="@font/open_sans"
                        android:spinnerMode="dropdown"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.478"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/dropdownlist3"
                        android:layout_width="340dp"
                        android:layout_height="43dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/dropdown_final"
                        android:fontFamily="@font/open_sans"
                        android:spinnerMode="dropdown"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.478"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dropdownlist2" />

                    <ImageView
                        android:id="@+id/add_destination2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/addicon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dropdownlist2"
                        app:srcCompat="@drawable/plus"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/add_destination1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:contentDescription="@string/addicon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dropdownlist1"
                        app:srcCompat="@drawable/plus"
                        tools:ignore="ImageContrastCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/cities_to_visit"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/CitiesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cities" />

            <TextView
                android:id="@+id/activites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/saved_activites"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CitiesRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ActivitiesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activites" />

            <TextView
                android:id="@+id/notesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/your_notes"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ActivitiesRecyclerView" />

            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:minHeight="130dp"
                android:paddingTop="15dp"
                android:paddingBottom="40dp"
                app:cardBackgroundColor="@color/countdown_statusbar"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp"
                app:contentPadding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notesLabel">

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/your_notes_go_here"
                    android:textAlignment="center"
                    android:textColor="@color/default_blue"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notesLabel" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/background"
        android:layout_width="394dp"
        android:layout_height="223dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detailsbackground" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/trip_name"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/saveicon"
        android:layout_width="46dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/saveicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/done" />

</androidx.constraintlayout.widget.ConstraintLayout>